tests/NormalTests/paczka1/small_fuzzy/76798373.err
Error in line 8: tSsUrkTUdnq S17 63,0
Error in line 10: cMXdJnjVi8 S55 35,1
